syntax = "proto3";

package user;

option go_package = "user/v1;v1";

service User{
  rpc Register(RegisterRequest) returns(RegisterReply);
  rpc Login(LoginRequest) returns(LoginReply);
}


message RegisterRequest{
  string name = 1;
  int64 gender = 2;
  string mobile = 3;
  string password = 4;
}

message RegisterReply {
  string name = 1;
  int64 gender = 2;
  string mobile = 3;
  string password = 4;
}

message LoginRequest {
  string mobile = 1;
  string password = 2;
}
message LoginReply {
  int64 id = 1;
  string name = 2;
  int64 gender = 3;
  string mobile = 4;
}